--- a/package.json
+++ b/package.json
@@ -4,27 +4,51 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start": "node src/server.ts",
+    "start": "nodemon src/server.ts",
+    "preserver": "npm run build",
+    "server": "node ./dist/server.js",
+    "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "lint": "eslint src/**/*.ts",
+    "build": "npx tsc",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
-    "test": "jasmine-ts",
+    "pretest": "npm run build",
+    "test": "ENV=test npx tsc && db-migrate db:drop postgres_test && db-migrate db:create postgres_test && db-migrate --env test up && node ./dist/tests/testDatabaseSamples.js && ENV=test jasmine",
     "tsc": "tsc"
   },
   "author": "Udacity",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
-    "typescript": "^4.1.3",
+    "cors": "^2.8.5",
+    "db-migrate": "^0.11.13",
+    "db-migrate-pg": "^1.2.2",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "global": "^4.4.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9",
+    "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
     "@types/jasmine": "^3.6.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/pg": "^7.14.7",
-    "jasmine": "^3.6.4",
-    "jasmine-spec-reporter": "^6.0.0",
-    "jasmine-ts": "^0.3.0",
-    "ts-node": "^9.1.1",
-    "tsc-watch": "^4.2.9"
+    "@types/supertest": "^2.0.12",
+    "compression": "^1.7.4",
+    "eslint": "8.8",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jasmine": "^4.5.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "jasmine-ts": "^0.4.0",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.0",
+    "ts-node": "^10.9.1",
+    "tsc-watch": "^4.2.9",
+    "typescript": "^4.9.3"
   }
 }
