--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ POSTGRES_DEV_DB=postgres_dev
 POSTGRES_HOST=127.0.0.1
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=0109090
-ENV=test
+ENV=dev
 BCRYPT_PASSWORD=bcrypt-password
 SALT_ROUNDS=10
 TOKEN_SECRET=waris
